Ensure some whitespace at the end of each article

--- a/css/base.css
+++ b/css/base.css
@@ -56,6 +56,7 @@ a:hover{
 }
 .main{
   float:left;
+  padding-bottom:50px;
   width:560px;
 }
 
